[package]
name = "rustero"
description = ""
keywords = ["zotero", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.0.1"
authors = ["Kha Dinh <dalo2903@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
dotenv = "0.15.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "sqlite", "macros", "all-types"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
dirs = "3.0.2"
clap = "2.34.0"
unicode-width = "0.1.10"
backtrace = "0.3.67"
arboard = "1.2.1"
tokio-test = {}
crossterm = "0.20"
tokio = { version = "1.27.0", features = ["full"] }
rand = "0.8.5"
anyhow = "1.0.70"
fuzzy-matcher = "0.3.7"
log = "0.4.17"

[[bin]]
bench = false
path = "src/main.rs"
name = "rustero"

[profile.release]
debug = true
